# tiny-varint

./: Cargo.toml  README.md
examples/: basic_usage.rs  benchmark.rs  iter_example.rs  protocol_serialization.rs  value_types.rs  zero_copy.rs
src/: batch.rs  encoding.rs  error.rs  iter.rs  lib.rs  tests.rs  traits.rs  value.rs  zigzag.rs
