[package]
name = "tiny-varint"
version = "0.2.0"
edition = "2021"
authors = ["Adancurusul <1016867898@qq.com>"]
description = "A no_std compatible VarInt encoding/decoding Rust library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Adancurusul/tiny-varint"
keywords = ["varint", "encoding", "no_std", "zigzag", "embedded"]
categories = ["no-std", "encoding", "embedded", "compression"]

[dependencies]
zigzag-rs = "0.2.1"

